<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="4dp"
    android:paddingRight="4dp" >

    <TableRow
        android:paddingTop="4dp"
        android:paddingBottom="4dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.CardMessage"
            android:text="@string/base_info_name" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="16dp"
            android:textAppearance="@style/TextAppearance.CardMessage" />

    </TableRow>

    <TableRow
        android:paddingTop="4dp"
        android:paddingBottom="4dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.CardMessage"
            android:text="@string/base_info_email" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="16dp"
            android:textAppearance="@style/TextAppearance.CardMessage" />

        <ImageView
            android:id="@+id/email_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:src="@drawable/ic_small_edit"/>

    </TableRow>

    <TableRow
        android:paddingTop="4dp"
        android:paddingBottom="4dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.CardMessage"
            android:text="@string/base_info_role" />

        <TextView
            android:id="@+id/role"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="16dp"
            android:textAppearance="@style/TextAppearance.CardMessage" />

    </TableRow>

    <TableRow
        android:paddingTop="4dp"
        android:paddingBottom="4dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.CardMessage"
            android:text="@string/base_info_affiliation" />

        <TextView
            android:id="@+id/affiliation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="16dp"
            android:textAppearance="@style/TextAppearance.CardMessage" />

        <ImageView
            android:id="@+id/affiliation_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:src="@drawable/ic_small_edit"/>

    </TableRow>

    <TableRow
        android:paddingTop="4dp"
        android:paddingBottom="4dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.CardMessage"
            android:text="@string/base_info_description" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="16dp"
            android:textAppearance="@style/TextAppearance.CardMessage" />

        <ImageView
            android:id="@+id/description_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:src="@drawable/ic_small_edit"/>

    </TableRow>

</TableLayout>
